<resources>
    <string name="app_name">Ubicacion de inicio y destino</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_ubicacion">Ubicacion</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="txt_lat_desde">Latitud de inicio</string>
    <string name="txt_lon_desde">Longitud de inicio</string>
    <string name="txt_lat_hasta">Latitud de fin</string>
    <string name="txt_lon_hasta">Longitud de fin</string>
    <string name="btn_ir">buscar</string>

    <string name="txt_inicio">Desde:</string>
    <string name="txt_hasta">Hasta:</string>
    <string name="title_activity_menu_google_maps">MenuGoogleMaps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ubicación GPS</string>
    <string name="nav_header_subtitle">Programación en Android</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_ubicacion">Mapa con ubicación</string>
    <string name="menu_ubicacion2">Mapa con ruta</string>

    <string name="txt_sat">Busqueda satelital via Longitud y Latitud</string>

    <string name="txt_mapa1">Mapa con ubicación</string>
    <string name="txt_titulo1">Ubicación:</string>
    <string name="txt_latitud1">Ingrese latitud</string>
    <string name="txt_longitud1">Ingrese longitud</string>
    <string name="btn_buscar1">buscar</string>
    <string name="title_activity_map_ubicacion">Map</string>

    <string name="txt_mapa3">Mapa con ruta GPS</string>
    <string name="txt_titulo3">Destino:</string>
    <string name="txt_latitud3">Ingrese latitud destino</string>
    <string name="txt_longitud3">Ingrese longitud destino</string>
    <string name="btn_buscar3">buscar</string>
    <string name="title_activity_map_ubicacion3">Mapsss</string>
</resources>
