<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/mapaUbicacion"
            android:icon="@drawable/ic_punto"
            android:title="@string/menu_ubicacion" />
        <item
            android:id="@+id/ubicacion"
            android:icon="@drawable/ic_punto"
            android:title="@string/menu_ubicacion2" />
        <item
            android:id="@+id/rutaGPS"
            android:icon="@drawable/ic_punto"
            android:title="Mapa con ruta GPS" />
    </group>
</menu>